static/css/style.css
/*Global*/

* {
    margin: 0;
    padding: 0;    
    text-decoration: none !important;
}

body {    
    background-color:whitesmoke;
    max-width: 1500px;
    margin-left: auto;
    margin-right: auto;       
    /* height: 100vh; */     
}

html * {
    font-family: 'Roboto', sans-serif;    
    font-weight: 400; 
    color: #313131; 
    scroll-behavior: smooth;   
}

/*testin*/
.container {
	width: 100%;
	margin: auto;
	height: fit-content;
}

.btn {
    font-weight: bold !important;
}
/*-------------------------------------*/
/*Navbar in base.html but on all pages*/
/*-----------------------------------*/

/* Styling for Title Wannabe Healthy*/
.title {
    color: #a3d31c;
    text-transform: capitalize;   
    font-family: 'Abril Fatface', cursive;    
    border-bottom:2px solid #a3d31c;
    font-weight: Bold; 
}

#header {    
    margin-left: 12px;
    left: 0;
    top: 0;       
}

/*hamburger for smaller screens*/
.bars {
    color:  #a3d31c !important;
}

/*Logo*/
#logo {
    height: 120px;
    width: 130px;
    padding: 10px;
}

/*styling for Navigation items*/
.nav-item,.nav-link {
    color: #a3d31c !important;
    font-size: 17px;
    letter-spacing: .2em;
    font-family: 'Abril Fatface', cursive;
    margin-left: 10px;   
    font-weight: bold;
    text-transform: capitalize;
}

/*Styling for Footer on all pages*/
footer {
    position: relative;
    width: 100%;
    left: 0;
    bottom: 0;
    background-color: #337920;
    color: white;
}

.footer-text,
.contact,
.social {
    padding-top: 5px; 
    color: white;
}

/*-------------------------------------*/
/* Styling for the Index Page */
/*-----------------------------------*/

/* Styling for Welcome Message */
.welcometosite {
    color: darkgreen;
    font-style: italic;
    font-size: 110%;
    font-weight: bold;
}

/*included in pagination options in blogs and recipes*/
.page-link {
    font-weight:bolder;
    color: darkgreen !important;
    font-style:oblique !important;    
}

/* Heading for index Page */
.bloghead {   
    text-align: center;
    color: darkgreen;
    font-family: 'Abril Fatface', cursive;
}

.text {   
    font-size: 110%;
    margin: 5vh;   
}

/*Search form for blogs styling*/
.searchform {
    padding-left: 20px;
    padding-top: 10px;
}

/* Blog Section on index page*/
/*blog content for blogs*/

/*Styling for individual blogs in blog section*/
.card-body1 {
    min-height: 420px;
    background-color: rgba(244, 247, 244, 0.4);    
    border-radius: 15px;   
}

/*Styling for titles*/
.card-title {
    text-align: center;
    color: #274b12;
    text-transform: capitalize; 
    min-height: 50px;   
}

/* alignment of images in blogs */
.image-container {
    position: relative;
    padding: 10px;    
}

.card-img-top {
    border-radius: 5px;
    border: 2px solid rgb(20, 88, 20);
    /* width: 240px;
    height: 250px;  */
}

/*Flash for author on image in blogs*/
.image-flash {
    position: absolute;
    bottom: 5%;
    min-width: 30%;
    left: 15px;
    background-color: rgb(83, 212, 83, 0.8);
}

/*Flash for category on image in blogs*/
.image-flash1 {
    position: absolute;
    top: 5%;
    min-width: 30%;
    right: 15px;
    color: green;
    background-color: rgba(255, 255, 255, 0.8);
    text-align: center;
    vertical-align: center;
}

/*Styling for author*/
.author {
    color: white;
    margin: 4px;
    text-transform: uppercase;
}

/*Styling for excerpt in blog*/
.card-text {
    text-align: center;
    padding: 5px;
    margin:5px; 
    /* min-height: 120px;   */
}

/*Styling for excerpt in blogs*/
.textual {
    min-height: 100px;
    padding: 5px;
    text-align: center;
}

/*Styling for blog look*/
.postlook {
    min-height: 560px;
    background-color: #7dd661;
    padding-top: 15px;
    border: 1px solid white;
    border-radius: 15px;   
}

/* ? */
.block {
    margin-bottom: 20px;
}

/*-------------------------------------*/
/* Styling for the About Page */
/*-----------------------------------*/

/*Styling for about page image*/
.aboutpic {
    height: 250px;
    width: 250px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
}

/* Styling for heading for Post Details Page */
.masthead {
    margin: 20px;    
    overflow: hidden;
    position: relative;
    display: inline-block;
    height: 33vh;
    width: 100%;
    text-align: center;
    padding-bottom: 40px;   
}

/*Styling for Category Title*/
.post-category {
    margin: 20px;      
    color: green;
    width: 15%;
    padding: 10px;
}

/*Styling for Post Detail Title*/
.post-title {
    margin-top: 20px;
    text-align: center;    
}

/*Styling for the subtitle of Post Detail blog*/
.post-subtitle {
    margin-left: 5%;
    color: darkslategray;
}

/*Styling for the subtitle of Recipe Detail page*/
.post-subtitle1 {
    text-align: center;
    color: darkslategray;
}

 .post-link {
    text-decoration: none;
    color: black;
} 

.post-link:hover,
.page-link {
    color: grey;
} 

 .btn-signup {
    background-color: purple;
    color: #fff;
} 

 .btn-signup:hover,
.btn-signup:active {
    background-color: #fff;
    color: #7b8181;
}  

a:link {
    color: black;
    text-decoration: none;
}

.link {
    color: rgb(12, 11, 11);
    text-decoration: none;
}

a:link:after {
    color: rgb(19, 18, 18);
    text-decoration: none;
}

.link:hover,
.link:active {
    color: black;
    text-decoration: none;
} 

a,
a:hover {
    color: rgb(128, 123, 123);
    text-decoration: none;
}

/* a, a:visited, a:hover, a:active {
    color: inherit;
} */

/* Styling for like button*/
.btn-like, .btn-comment {
    color: rgb(65, 224, 65);
    border: none;
    background: transparent;
} 

.btn-like:hover,
.btn-like:active {
    color: rgb(5, 97, 5);   
    border: none;
}

.white {
    color: white;
}

.image-container{
    /* width: 300px;
    height: 200px; */
    display: block;
    margin-left: auto;
    margin-right: auto;
}
/* ... */

